Fix Omnibar Move Rem Input visibility

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -587,7 +587,10 @@
 			color: var(--darkmode-text);
 			background-color: var(--darkmode-background);
 			border: 3px solid #FFF;
-			
+			// Move Rem Input
+				input.placeholder\:text-gray-30.rn-clr-content-primary {
+					color: var(--darkmode-text) !important;
+				}
 			// Top
 				> div:nth-of-type(1) {
 					> div {
